Perkin-UAT/force-app/main/default/objects/B2B_Country_Tax_Config__mdt/B2B_Country_Tax_Config__mdt.object-meta.xml
<CustomObject>
    <description>Used to store Tax config as per countries.</description>
    <label>B2B Country Tax Config</label>
    <pluralLabel>B2B Country Tax Configs</pluralLabel>
</CustomObject>