Perkin-UAT/force-app/main/default/objects/B2B_Country_Tax_Config__mdt/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <label>Country Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>