Perkin-UAT/force-app/main/default/objects/B2B_Country_Tax_Config__mdt/fields/SAP_Goods_Tax__c.field-meta.xml
<CustomField>
    <fullName>SAP_Goods_Tax__c</fullName>
    <label>SAP Goods Tax</label>
    <length>255</length>
    <type>Text</type>
</CustomField>