Perkin-UAT/force-app/main/default/objects/B2B_Country_Tax_Config__mdt/fields/Tax_Source__c.field-meta.xml
<CustomField>
    <fullName>Tax_Source__c</fullName>
    <label>Tax Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>