Perkin-UAT/force-app/main/default/objects/B2B_Country_Tax_Config__mdt/fields/Transaction_External_Check__c.field-meta.xml
<CustomField>
    <fullName>Transaction_External_Check__c</fullName>
    <label>Transaction External Check</label>
    <length>255</length>
    <type>Text</type>
</CustomField>